# quicksync

./: .env.example  .gitignore  Dockerfile  README.md  Technical Design.md  docker-compose.yml  local.env  netlify.toml  package.json  pyproject.toml  requirements.md  requirements.txt  vercel.json
netlify/functions/: api.js  api.py  package.json  server.py  sync.js  sync_script.py
public/: index.html
quicksync/src/: main.py  run.py
quicksync/src/api/: router.py
quicksync/src/clients/: mailchimp.py  mockapi.py
quicksync/src/models/: contact.py
quicksync/src/services/: sync_service.py
quicksync/tests/: conftest.py  test_api.py  test_mailchimp_client.py  test_mockapi_client.py  test_sync_service.py
static/: index.html
